<resources>
    <string name="app_name">GoPatrol</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="e_mail">E-mail</string>
    <string name="go_patrol">Go Patrol</string>
    <string name="secure_your">Secure your area</string>
    <string name="remamber_me">Remember Me</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="pesan">Pesan</string>
    <string name="title_incident">Incident</string>
    <string name="check">Check</string>
    <string name="profile">Profil</string>
    <string name="message">Pesan</string>
    <string name="incident">Insiden</string>
    <string name="tittle_check">Check</string>
    <string name="tittle_profile">Profile</string>
</resources>