<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.firstproject.gopatrol.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.firstproject.gopatrol.ui.message.MessageFragment"
        android:label="@string/pesan"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_incident"
        android:name="com.firstproject.gopatrol.ui.incident.IncidentFragment"
        android:label="@string/title_incident"
        tools:layout="@layout/fragment_incident" />

    <fragment
        android:id="@+id/navigation_check"
        android:name="com.firstproject.gopatrol.ui.fragment.check.CheckFragment"
        android:label="@string/tittle_check"
        tools:layout="@layout/fragment_check"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.firstproject.gopatrol.ui.fragment.profile.ProfileFragment"
        android:label="@string/tittle_profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>